--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-router-dom": "^7.11.0",
-    "date-fns": "^4.1.0",
-    "lucide-react": "^0.562.0",
-    "react-dom": "^19.2.3",
     "@google/genai": "^1.34.0",
-    "recharts": "^3.6.0"
+    "@tailwindcss/cli": "^4.1.18",
+    "date-fns": "^4.1.0",
+    "firebase": "^12.7.0",
+    "lucide-react": "^0.562.0",
+    "node": "^20.19.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-router-dom": "^7.11.0",
+    "recharts": "^3.6.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
