feat(pms): scaffold initial application and concierge AI
Creates the foundational structure for the StayOS PMS including core
routing, user contexts, and the initial set of functional pages.

- Sets up React Router, AuthContext, and DemoModeContext
- Implements core services for mock data and Firebase integration
- Adds primary pages: Dashboard, Bookings, Rooms, Housekeeping, Accounting
- Integrates Google Generative AI SDK and the AI Concierge chat interface

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebase/app": "^0.14.6",
+    "@firebase/vertexai-preview": "^0.0.4",
     "@google/genai": "^1.34.0",
+    "@google/generative-ai": "^0.24.1",
     "@tailwindcss/cli": "^4.1.18",
     "date-fns": "^4.1.0",
     "firebase": "^12.7.0",
