--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@firebase/app": "^0.14.6",
     "@firebase/vertexai-preview": "^0.0.4",
+    "@genkit-ai/googleai": "^1.27.0",
     "@google/genai": "^1.34.0",
     "@google/generative-ai": "^0.24.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
     "@tailwindcss/cli": "^4.1.18",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "firebase": "^12.7.0",
+    "genkit": "^1.27.0",
     "lucide-react": "^0.562.0",
     "node": "^20.19.0",
     "react": "^19.2.3",
